force-app/main/default/objects/CandidateSubjectChoices__c/CandidateSubjectChoices__c.object-meta.xml
<CustomObject>
    <label>Candidate Subject Choices</label>
    <nameField>
        <label>CandidateSubjectChoices Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Subject Choices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>