force-app/main/default/objects/CandidateSubjectChoices__c/fields/STUDENT__c.field-meta.xml
<CustomField>
    <fullName>STUDENT__c</fullName>
    <label>STUDENT</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Candidate Subject Choices</relationshipLabel>
    <relationshipName>Candidate_Subject_Choices</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>